manifests/homepage/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homepage
  namespace: homepage
spec:
  ingressClassName: nginx-private
  tls:
    - hosts:
        - homepage.techtronics.top
  rules:
    - host: homepage.techtronics.top
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: homepage
                port:
                  number: 3000
